--- a/honest/docker-compose.yaml
+++ b/honest/docker-compose.yaml
@@ -7,11 +7,8 @@ services:
       # Change Environment for test (Using QA)
       VALIDATOR_OUTPUT_SUBMITTER_DISABLED: "true" # Output submitter
       VALIDATOR_CHALLENGER_DISABLED: "false"      # Challenger
-      VALIDATOR_MALICIOUS_BLOCK_NUMBER: "1"       # Malicious block number
 
       # Don't Changed Environment
-      # - Vanilla-geth-0: 3.35.246.87 
-      # - Vanilla-node-0: 43.200.247.146
       VALIDATOR_L1_ETH_RPC: wss://wc.easel.kroma.cc  # Target to L1 Geth Client RPC (Easel)
       VALIDATOR_ROLLUP_RPC: http://43.200.247.146:8545 # Target to L2 Consensus Client (Proposer Node)
       VALIDATOR_METRICS_ENABLED: "true"
@@ -33,5 +30,5 @@ services:
       VALIDATOR_VALPOOL_ADDRESS: "0x8bCe54ff8aB45CB075b044AE117b8fD91F9351aB"
       VALIDATOR_SECURITYCOUNCIL_ADDRESS: "0x5D42EBdBBa61412295D7b0302d6F50aC449Ddb4F"
       VALIDATOR_MNEMONIC: "wonder paper game grace consider pizza grain judge stadium street nothing elevator"
-      VALIDATOR_HD_PATH: "m/44'/60'/1'/0/7"       # QA 7,8 devops 0~6
-      # VALIDATOR_PRIVATE_KEY: "" # MNEMONIC 으로 대체
+      VALIDATOR_HD_PATH: "m/44'/60'/1'/0/7"       # QA 7~10 devops 0~6
+#      VALIDATOR_HD_PATH: "m/44'/60'/1'/0/9"
