chore: increase validator bond amount

--- a/malicious/docker-compose.yaml
+++ b/malicious/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       VALIDATOR_PPROF_ENABLED: "true"
       VALIDATOR_PROVER_GRPC: "http://3.35.246.87:8545" # 임시 Prover Ip
       VALIDATOR_CHALLENGER_POLL_INTERVAL: 5s
-      VALIDATOR_OUTPUT_SUBMITTER_BOND_AMOUNT: "1"
+      VALIDATOR_OUTPUT_SUBMITTER_BOND_AMOUNT: "1000000000"
       VALIDATOR_GUARDIAN_ENABLED: "false"
       
       # Secret Configs
