--- a/honest/docker-compose.yaml
+++ b/honest/docker-compose.yaml
@@ -2,15 +2,16 @@ version: '3.9'
 
 services:
   validator:
-    image: kromanetwork/validator:dev
+    image: kromanetwork/validator:v0.3.0
     environment:
       # Change Environment for test (Using QA)
-      VALIDATOR_OUTPUT_SUBMITTER_DISABLED: "true" # Output submitter
-      VALIDATOR_CHALLENGER_DISABLED: "false"      # Challenger
+      VALIDATOR_OUTPUT_SUBMITTER_ENABLED: "false" # Output submitter
+      VALIDATOR_CHALLENGER_ENABLED: "true"        # Challenger
 
       # Don't Changed Environment
-      VALIDATOR_L1_ETH_RPC: wss://wc.easel.kroma.cc  # Target to L1 Geth Client RPC (Easel)
-      VALIDATOR_ROLLUP_RPC: "http://temporary-inhouse-alb-1675552331.ap-northeast-2.elb.amazonaws.com:80" # Target to L2 Consensus Client (Proposer Node)
+      VALIDATOR_L1_ETH_RPC: "wss://wc.easel.kroma.cc" # Target to L1 Geth Client RPC (Easel)
+      VALIDATOR_L2_ETH_RPC: "https://api.sail.kroma.cc" # Target to L2 Geth Client RPC (Sail)
+      VALIDATOR_ROLLUP_RPC: "http://dev-kroma-sail-apne2-vanilla-0.kroma.cc:9545" # Target to L2 Consensus Client (Full Node)
       VALIDATOR_METRICS_ENABLED: "true"
       VALIDATOR_ALLOW_NON_FINALIZED: "true"
       VALIDATOR_TXMGR_TX_SEND_TIMEOUT: 600s
@@ -19,14 +20,13 @@ services:
       VALIDATOR_RESUBMISSION_TIMEOUT: 30s
       VALIDATOR_LOG_TERMINAL: "true"
       VALIDATOR_PPROF_ENABLED: "true"
-      VALIDATOR_PROVER_GRPC: "3.36.227.163:50051" # 임시 Prover Ip
+      VALIDATOR_PROVER_RPC: "prover-proxy.sail.kroma.cc"
       VALIDATOR_CHALLENGER_POLL_INTERVAL: 5s
-      VALIDATOR_OUTPUT_SUBMITTER_BOND_AMOUNT: "1000000000"
       VALIDATOR_GUARDIAN_ENABLED: "false"
 
       # Secret Configs
       VALIDATOR_L2OO_ADDRESS: "0x74Cf9087AD26D541930BaC724B7ab21bA8F00a27"
-      VALIDATOR_COLOSSEUM_ADDRESS: "0xA56F946D6398Dd7d9D4D9B337Cf9E0F68982ca5B"
+      VALIDATOR_COLOSSEUM_ADDRESS: "0x88D1aF96098a928eE278f162c1a84f339652f95b"
       VALIDATOR_VALPOOL_ADDRESS: "0x8bCe54ff8aB45CB075b044AE117b8fD91F9351aB"
       VALIDATOR_SECURITYCOUNCIL_ADDRESS: "0x5D42EBdBBa61412295D7b0302d6F50aC449Ddb4F"
       VALIDATOR_MNEMONIC: "wonder paper game grace consider pizza grain judge stadium street nothing elevator"
