--- a/honest/docker-compose.yaml
+++ b/honest/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   validator:
-    image: kromanetwork/validator:v0.3.0
+    image: kromanetwork/validator:dev-2a89676
     environment:
       # Change Environment for test (Using QA)
       VALIDATOR_OUTPUT_SUBMITTER_ENABLED: "false" # Output submitter
