--- a/honest/docker-compose.yaml
+++ b/honest/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       VALIDATOR_RESUBMISSION_TIMEOUT: 30s
       VALIDATOR_LOG_TERMINAL: "true"
       VALIDATOR_PPROF_ENABLED: "true"
-      VALIDATOR_PROVER_RPC: "prover-proxy.sail.kroma.cc"
+      VALIDATOR_PROVER_RPC: "https://prover-proxy.sail.kroma.cc"
       VALIDATOR_CHALLENGER_POLL_INTERVAL: 5s
       VALIDATOR_GUARDIAN_ENABLED: "false"
 
