--- a/malicious/docker-compose.yaml
+++ b/malicious/docker-compose.yaml
@@ -22,10 +22,10 @@ services:
       VALIDATOR_RESUBMISSION_TIMEOUT: 30s
       VALIDATOR_LOG_TERMINAL: "true"
       VALIDATOR_PPROF_ENABLED: "true"
-      VALIDATOR_PROVER_GRPC: "3.36.227.163:50051" # 임시 Prover Ip
       VALIDATOR_CHALLENGER_POLL_INTERVAL: 5s
       VALIDATOR_GUARDIAN_ENABLED: "false"
-      VALIDATOR_PROVER_RPC: "https://prover-proxy.sail.kroma.cc"
+      VALIDATOR_PROVER_RPC: "http://43.200.68.65:6000"
+      VALIDATOR_FETCHING_PROOF_TIMEOUT: 14400s
       
       # Secret Configs
       VALIDATOR_L2OO_ADDRESS: "0x74Cf9087AD26D541930BaC724B7ab21bA8F00a27"
