chore: update proxy url

--- a/validators/honest/docker-compose.yaml
+++ b/validators/honest/docker-compose.yaml
@@ -20,9 +20,10 @@ services:
       VALIDATOR_RESUBMISSION_TIMEOUT: 30s
       VALIDATOR_LOG_TERMINAL: "true"
       VALIDATOR_PPROF_ENABLED: "true"
-      VALIDATOR_PROVER_RPC: "https://prover-proxy.sail.kroma.cc"
+      VALIDATOR_PROVER_RPC: "http://43.200.68.65:6000"
       VALIDATOR_CHALLENGER_POLL_INTERVAL: 5s
       VALIDATOR_GUARDIAN_ENABLED: "false"
+      VALIDATOR_FETCHING_PROOF_TIMEOUT: 14400s
 
       # Secret Configs
       VALIDATOR_L2OO_ADDRESS: "0x74Cf9087AD26D541930BaC724B7ab21bA8F00a27"
