--- a/validators/honest/docker-compose.yaml
+++ b/validators/honest/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   validator:
-    image: kromanetwork/validator:dev-2a89676
+    image: kromanetwork/validator:v0.3.0-rc.2
     environment:
       # Change Environment for test (Using QA)
       VALIDATOR_OUTPUT_SUBMITTER_ENABLED: "false" # Output submitter
