--- a/validators/malicious/docker-compose.yaml
+++ b/validators/malicious/docker-compose.yaml
@@ -9,7 +9,8 @@ services:
       # Change Environment for test (Using QA)
       VALIDATOR_OUTPUT_SUBMITTER_ENABLED: "true" # Output submitter
       VALIDATOR_CHALLENGER_ENABLED: "false"      # Challenger
-      VALIDATOR_MALICIOUS_BLOCK_NUMBER: "2321300" # Malicious block number
+      VALIDATOR_MALICIOUS_BLOCK_NUMBER: "232130" # Malicious block number
+      VALIDATOR_OUTPUT_SUBMISSION_INTERVAL: "60" # L2 output submission interval
 
       # Don't Change Environment
       VALIDATOR_L1_ETH_RPC: "wss://wc.easel.kroma.cc" # Target to L1 Geth Client RPC (Easel)
