chore: add allow public round

--- a/validators/malicious/docker-compose.yaml
+++ b/validators/malicious/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
       VALIDATOR_GUARDIAN_ENABLED: "false"
       VALIDATOR_PROVER_RPC: "http://43.200.68.65:6000"
       VALIDATOR_FETCHING_PROOF_TIMEOUT: 14400s
+      VALIDATOR_OUTPUT_SUBMITTER_ALLOW_PUBLIC_ROUND: true
       
       # Secret Configs
       VALIDATOR_L2OO_ADDRESS: "0x81F82957608f74441E085851cA5Cc091b23d17A2"
